fix: title cut off after preview textarea expands

--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     margin: 0 auto;
-    height: 100vh;
+    /* height: 100vh; */
     width: 80%;
     max-width: 760px;
     display: flex;
